# vmse2000-detector

./: .gitmodules  .python-sandbox  README.md  first-prototype.py  phoneme_sim.py  pyproject.toml  requirements.txt  start.sh
data/: phoneme.txt
scripts/: convert-whisper-to-openvino-audioctx.py  setup_virtual_mic.sh
vmse2kv3/: detector.py  detector_v2.py  openai_tokenizer.py  phonsim.py
vmse2kv3/assets/: asoundrc  swear_words.txt
