[tool.poetry]
name = "vmse2kv3"
version = "0.1.0"
description = ""
authors = ["nemo <git@ningu.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
